# kelftool

./: .gitignore  CMakeLists.txt  Makefile  README.md  kelftool.sln  kelftool.vcxproj
.github/workflows/: compilation.yml
src/: common.h  inipp.h  kelf.cpp  kelf.h  kelftool.cpp  keystore.cpp  keystore.h
